# Quadigi

./: CMakeLists.txt  README.md
build_new/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Calculator.sln  Calculator.vcxproj  Calculator.vcxproj.filters  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_new/Calculator.dir/Debug/: Calculator.exe.recipe  Calculator.ilk
build_new/Calculator.dir/Debug/Calculator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_new/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_new/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_new/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_new/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
src/: Inode.h  Operators.h  Parser.h  Value.h  Variable.h  main.cpp
tests/: CMakeLists.txt  TestCalculator.cpp
